fix: gift card cta not showing

--- a/packages/shopify-theme/assets/component-main-gift.css
+++ b/packages/shopify-theme/assets/component-main-gift.css
@@ -2942,7 +2942,6 @@
       .size___wrapper {
         position: fixed;
         width: 100%;
-        bottom: -200px;
         background: #eeeee9;
         left: 0px;
         border:none;
@@ -2981,7 +2980,7 @@
       .size___wrapper {
         position: fixed;
         width: 100%;
-        bottom: -200px;
+        bottom: -20px;
         background: #eeeee9;
         left: 0px;
         border:none;
