--- a/packages/shopify-theme/assets/main-only-color.css
+++ b/packages/shopify-theme/assets/main-only-color.css
@@ -2922,7 +2922,7 @@ a#size-guide2 {
   .size___wrapper {
     position: fixed;
     width: 100%;
-    bottom: -200px;
+    /*bottom: -200px;*/
     background: #eeeee9;
     left: 0px;
     border: none;
