--- a/packages/shopify-theme/assets/main-single-variant.css
+++ b/packages/shopify-theme/assets/main-single-variant.css
@@ -2647,7 +2647,7 @@ width: 15px;
       .size___wrapper {
         position: fixed;
         width: 100%;
-        bottom: -200px;
+        /*bottom: -200px;*/
         background: #eeeee9;
         left: 0px;
         border:none;
@@ -2696,7 +2696,7 @@ width: 15px;
       .size___wrapper {
         position: fixed;
         width: 100%;
-        bottom: -200px;
+        /*bottom: -200px;*/
         background: #eeeee9;
         left: 0px;
         border:none;
